[package]
name = "htm-rs"
version = "0.0.1"
authors = ["Jannis Schoepplenberg"]
description = "Hierarchical Temporal Memory (HTM) implementation in Rust."
keywords = []
categories = []
license = "MIT"
readme = "README.md"
repository = ""
edition = "2021"

[dependencies]
collect_slice = "1.2.0"
fnv = "1.0.7"
fxhash = "0.2.1"
rand = "0.9.0"
image = "0.25.6"
imageproc = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.98"

[dependencies.mnist]
version = "0.6.0"
features = ["download"]

